<resources>
    <string name="app_name">VotingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Topics</string>
    <string name="menu_myaccount">My Account</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="Meeting">Meeting</string>
    <string name="Poll">Poll</string>

    <string-array name="names">
        <item>Sion</item>
        <item>Sierre</item>
        <item>Martigny</item>
        <item>Monthey</item>
        <item>Brig</item>
        <item>Crans-Montana</item>
    </string-array>


    <string-array name="category">
        <item>Politics</item>
        <item>Leisure</item>
        <item>Business</item>
        <item>School</item>
        <item>Sport</item>
    </string-array>


    <string-array name="language">
        <item>FR</item>
        <item>EN</item>
    </string-array>

    <string name="home_second">Home Second</string>
    <string name="button_connect">Connect</string>
    <string name="Label_username">Username</string>
    <string name="Label_Password">Password</string>
    <string name="Description_Logo">Logo</string>
    <string name="no_account_yet">No account yet ?</string>
    <string name="registerbtn">Register</string>
    <string name="firstname">Firstname :</string>
    <string name="name">Name</string>
    <string name="address">Address :</string>
    <string name="city">City :</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create">Create</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="chooseOption">Choose a type of vote :</string>
    <string name="TitlePollStep1">Step 1 : What is your question ?</string>
    <string name="TitleQuestion">Title</string>
    <string name="titlecategory">Category</string>
    <string name="addDecription">Add a description</string>
    <string name="next">Next</string>
    <string name="titlestep2">Step 2 : Choose the answers !</string>
    <string name="addanswer">Add an answer</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="finish">Done</string>
    <string name="titlemeeting">Create your meeting</string>
    <string name="subjectmeeting">Title of meeting</string>
    <string name="description">Add a description</string>
    <string name="place">Add a place</string>
    <string name="done">Done</string>
    <string name="deadline">Deadline</string>
    <string name="lastName">Lastname :</string>
    <string name="all">All</string>
    <string name="my_topics">My Topics</string>
    <string name="hintmeetingselected">Will you be present to this meeting ?</string>
    <string name="yesmeeting">Yes</string>
    <string name="Nobtn">No</string>
    <string name="chooseAnswersTitle">Choose the answers that you want !</string>
    <string name="validateAnswers">Done</string>
    <string name="password_change">Password Change :</string>
    <string name="general_information">GENERAL INFORMATION</string>
    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="email_address">Email address :</string>
    <string name="birthdate">Birthdate :</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="deleteAttedance">Are you sure you want to change your answer ?</string>
    <string name="delete">Delete</string>
    <string name="account_created">Account Created !</string>
    <string name="error_used_email">Email already used !</string>
    <string name="error_invalid_email">Wrong credentials</string>
</resources>
