<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/menu">

    <group android:checkableBehavior="single">

        <item

            android:id="@+id/nav_myaccount"
            android:icon="@drawable/person"
            android:title="@string/menu_myaccount" />

        <item
            android:id="@+id/my_topics"
            android:title="@string/my_topics"
            android:icon="@drawable/ledger" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/vote"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/question"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/exit"
            android:title="@string/menu_logout"
            app:showAsAction="always" />

        <item
            android:title="@string/action_settings"
            android:titleCondensed="@string/menu_settings"
            android:enabled="false" />


        <item
            android:id="@+id/darkMode"
            android:icon="@drawable/darkmode"
            android:title="Dark mode"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />



    </group>


</menu>
