<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:orderInCategory="50"
        android:icon="@drawable/filter"
        android:title="@string/menu_about"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/all_filter"
                android:orderInCategory="100"
                android:title="@string/all" />
            <item
                android:id="@+id/meeting_filter"
                android:orderInCategory="100"
                android:title="@string/Meeting"/>
            <item
                android:id="@+id/poll_filter"
                android:orderInCategory="100"
                android:title="@string/Poll" />
        </menu>
    </item>

    <item
        android:id="@+id/edit"
        android:orderInCategory="50"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        app:showAsAction="always" />
</menu>
