<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"

    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mytestapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home" />
    </fragment>



    <fragment
        android:id="@+id/nav_myaccount"
        android:name="com.example.mytestapp.ui.account.AccountFragment"
        android:label="@string/menu_myaccount"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_nav_myaccount_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>



    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mytestapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>



    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mytestapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>