<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="688dp"
        android:text="@string/register"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="509dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/birthdate"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="430dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/address"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="359dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/city"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="287dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="205dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="122dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="122dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="37dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>